--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Compiled and minified JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="./Index.css">
+	<link rel="stylesheet" type="text/css" href="./index.css">
 	<!-- <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet"> -->
 	<script src="https://kit.fontawesome.com/6066e589cc.js" crossorigin="anonymous"></script>
